perf/benchmark/experiments/istio_plaintext/saved-configs/authn-policy.yaml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1
  kind: PeerAuthentication
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1beta1","kind":"PeerAuthentication","metadata":{"annotations":{},"name":"default","namespace":"twopods-istio"},"spec":{"mtls":{"mode":"PERMISSIVE"}}}
    creationTimestamp: "2025-05-27T16:11:38Z"
    generation: 1
    name: default
    namespace: twopods-istio
    resourceVersion: "1611356"
    uid: 30d3ea78-18c4-482e-b6d0-b573925cd85a
  spec:
    mtls:
      mode: PERMISSIVE
kind: List
metadata:
  resourceVersion: ""
